parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__raw-string-literals-1.snap
---
source: parser/src/lexer/lexer.rs
description: "r\"world\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "r\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
