parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@binary_op.py-12.snap
---
source: parser/src/lexer/lexer.rs
description: 1 | 2
input_file: parser/test_data/inputs/one_liners/binary_op.py
---
[
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: BitOr,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 4,
        end: 5,
    },
]
